# ais-recv-fw

./: README.md
application/: CMakeLists.txt  Kconfig  prj.conf  west.yml
application/boards/arm/ais_recv/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  ais_recv.dts  ais_recv_defconfig  board.c  pinmux.c
application/dts/bindings/radio/: silabs,si4362.yaml
application/hdlc/: CMakeLists.txt  Kconfig
application/hdlc/doc/: hdlc.smcat
application/hdlc/include/: hdlc.h
application/hdlc/src/: hdlc.c
application/hdlc/tests/: CMakeLists.txt  prj.conf  testcase.yaml
application/hdlc/tests/src/: main.c
application/src/: main.c  radio_config_ch1.c  radio_config_ch1.h  radio_config_ch1_cal.h  radio_config_ch2.c  radio_config_ch2.h  radio_config_ch2_cal.h  radio_configs.h  radio_patch.c  si4362.c  si4362.h  si4362_shell.c
